ci_cd/jekins/jekins-on-k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: default
spec:
  selector:
    name: jenkins
  type: NodePort
  ports:
    - name: http
      port: 8080
      protocol: TCP
      nodePort: 30900
    - name: agent
      port: 50000
      protocol: TCP
